# email-summery

./: .gitignore  API_IMPROVEMENTS.md  GITHUB_SETUP.md  IMPLEMENTATION_NOTES.md  README.md  TESTING_CHECKLIST.md  requirements.md
backend/: main.py  models.py  pyproject.toml  summarizer.py  test_api.py
frontend/public/: threads.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: SummaryEditor.css  SummaryEditor.tsx  ThreadDetail.css  ThreadDetail.tsx  ThreadList.css  ThreadList.tsx
frontend/src/types/: thread.ts
