[project]
name = "ce-email-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.120.4",
    "pydantic>=2.12.3",
    "python-multipart>=0.0.20",
    "spacy>=3.8.7",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "uvicorn>=0.38.0",
]
